# BLEMidiESP32

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
components/blemidi/include/: blemidi.h
main/: BLEMidiESP32.cpp  Button.cpp  ButtonManager.cpp  CMakeLists.txt  Led.cpp  gpioDefinition.c  gpioESP32.cpp  main.cpp
main/Inc/bluetooth/: BLEMidiESP32.h  MidiAbs.h  MidiBLEAbs.h
main/Inc/button/: Button.h  ButtonManager.h
main/Inc/gpio/: gpioAbs.h  gpioDefinition.h  gpioESP32.h
main/Inc/led/: Led.h
main/Inc/midi/: MidiInterface.h
main/Inc/uart/: UartMidiAbs.h  UartMidiESP32.h
main/src/: MidiInterface.c
main/src/ble/: BLEMidiESP32.cpp
main/src/button/: ButtonManager.cpp
main/src/gpio/: gpioDefinition.c
main/src/led/: Led.cpp
main/src/midi/: MidiInterface.cpp
main/src/uart/: UartMidiESP32.cpp
test/: CMakeLists.txt  installGtest.sh  main_test.cpp  runTest.sh
